--- a/计算公式的网页.html
+++ b/计算公式的网页.html
@@ -105,7 +105,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="name2" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id="name3" />
+          <span disabled="true" id="name3" >
         </div>
         <div style="float:center;
                     margin:10px;">
@@ -122,7 +122,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id="" />
+          <span disabled="true" id="" >
         </div>
         <div style="float:center;
                     margin:10px;">
@@ -139,7 +139,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id=""/>
+          <span disabled="true" id="">
         </div>
         <div style="float:center;
                     margin:10px;">
@@ -156,7 +156,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="name2" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id="name3" />
+          <span disabled="true" id="name3" >
         </div>
         <div style="float:center;
                     margin:10px;">
@@ -173,7 +173,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="name2" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id="name3" />
+          <span disabled="true" id="name3" >
         </div>
         <div style="float:center;
                     margin:10px;">
@@ -190,7 +190,7 @@
           +
           <input style="border-radius:8px;width:90px" type="text" id="name2" placeholder=" 输入检索条件" />
           =
-          <span disabled="true" id="name3" />
+          <span disabled="true" id="name3" >
         </div>
         <div style="float:center;
                     margin:10px;">
